# lib-spec-parser

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: 00-decision-log.md  01-user-stories.md  02-diagram-spec.md  03-diagram-generation.md  04-oss-selection.md  05-requirements.md  06-architecture.md  07-spec.md  99-trace-matrix.md  README.md  api.md  architecture.md
lib_spec_parser/: __init__.py  diagram_extractor.py  errors.py  executor.py  format_detector.py  models.py  section_assembler.py  spec_id_extractor.py  style_detector.py  trace_tag_extractor.py
lib_spec_parser/parsers/: __init__.py  connextra_parser.py  ears_classifier.py  generic_parser.py  gherkin_parser.py
tests/acceptance/: test_fr01_parse_normalized.py  test_fr02_trace_tags.py  test_fr03_style_detection.py  test_fr04_spec_id_extraction.py  test_fr05_section_structure.py  test_fr06_diagram_extraction.py  test_fr07_gherkin_ears.py
tests/unit/: test_connextra_parser.py  test_diagram_extractor.py  test_ears_classifier.py  test_format_detector.py  test_gherkin_parser.py  test_spec_id_extractor.py  test_style_detector.py  test_trace_tag_extractor.py
