[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lib-spec-parser"
version = "0.1.0"
description = "Spec file parser: extracts SpecId, TraceTag, SpecSection, DiagramRef from Markdown/YAML/RST spec files"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov", "ruff", "pyright"]

[tool.setuptools.packages.find]
where = ["."]
include = ["lib_spec_parser*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
